--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,9 @@
   <name>petclinic</name>
 
   <properties>
+    <sonar.projectKey>jenkins770</sonar.projectKey>
+    <sonar.organization>jenkins770</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
 
     <!-- Generic properties -->
     <java.version>1.8</java.version>
